Add endpoint getAllTeams + renamed Team to TeamDto and User to UserResponse